update basic information

--- a/index.html
+++ b/index.html
@@ -126,6 +126,10 @@
               <div class="label"><span>組織</span><span>85%</span></div>
               <div class="progress" data-value="85"><i></i></div>
             </div>
+            <div class="skill">
+              <div class="label"><span>運動能力</span><span>90%</span></div>
+              <div class="progress" data-value="90"><i></i></div>
+            </div>
           </div>
           <div class="tags" aria-hidden="true">
             <span class="tag">理性</span>
