--- a/index.html
+++ b/index.html
@@ -113,7 +113,22 @@
       </div>
     </section>
 
-    
+    <section id="skills">
+      <div class="section-title"><h3>技能展示</h3></div>
+      <div class="grid">
+        <div>
+          <div class="skills-list">
+            <div class="skill-cloud" aria-label="技能標籤雲">
+              <span class="skill-tag" data-value="95">溝通</span>
+              <span class="skill-tag" data-value="75">學習</span>
+              <span class="skill-tag" data-value="85">組織</span>
+              <span class="skill-tag" data-value="90">運動能力</span>
+            </div>
+          </div>
+
+        </div>
+      </div>
+    </section>
 
     <section id="timeline">
       <div class="section-title"><h3>工作 / 經歷時間軸</h3></div>
