--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-<ˊ!DOCTYPE html>
 <html lang="zh-TW">
 <head>
   <meta charset="UTF-8">
@@ -98,7 +97,7 @@
   <main class="container">
     <section class="hero">
       <div class="avatar" aria-hidden="true">
-        <img src="https://via.placeholder.com/400x400.png?text=Photo" alt="示意照片">
+        <img src="../IMG_E5467.JPG" alt="個人資料照片">
       </div>
       <div class="meta">
         <h2>鍾安陞</h2>
@@ -169,25 +168,25 @@
       <div class="section-title"><h3>專案作品集</h3></div>
       <div class="projects-grid">
         <article class="card">
-          <img src="assets/painting.jpg" alt="作品照片">
+          <img src="IMG_2137.JPG" alt="畫作：IMG_2137">
           <div class="content">
-            <div class="title">作品：畫作</div>
-            <div class="meta">來源：上傳照片。說明：個人繪畫作品（或照片）。角色：創作者。<a href="#" style="margin-left:6px">查看原圖</a></div>
+            <div class="title">作品：用Layout畫圖</div>
+            <div class="meta">說明：全中運補假時，去舅舅的公司體驗工程師的生活，也使用他們的工作軟體畫Logo。<a href="#" style="margin-left:6px">查看原圖</a></div>
           </div>
         </article>
         <article class="card">
-          <img src="IMG_8606.JPG" alt="IMG_8606">
+          <img src="IMG_8606.JPG" alt="不同人的歐洲視角">
           <div class="content">
-            <div class="title">作品：IMG_8606</div>
-            <div class="meta">來源：實拍照片。說明：個人創作或拍攝作品。角色：創作者/攝影者。<a href="IMG_8606.JPG" style="margin-left:6px">查看原圖</a></div>
+            <div class="title">作品：不同人的歐洲視角</div>
+            <div class="meta">說明：許多人對於歐洲的視角很好，但居住在當地的人可能不是這麼覺得。<a href="IMG_8606.JPG" style="margin-left:6px">查看原圖</a></div>
           </div>
         </article>
 
         <article class="card">
-          <img src="IMG_8607.JPG" alt="IMG_8607">
+          <img src="IMG_8607.JPG" alt="濕度瓶">
           <div class="content">
-            <div class="title">作品：IMG_8607</div>
-            <div class="meta">來源：實拍照片。說明：個人創作或拍攝作品。角色：創作者/攝影者。<a href="IMG_8607.JPG" style="margin-left:6px">查看原圖</a></div>
+            <div class="title">作品：濕度瓶</div>
+            <div class="meta">說明：暑期的營隊，學長姐帶著我們做這作品，讓我們能更認識每一天空氣的濕度。<a href="IMG_8607.JPG" style="margin-left:6px">查看原圖</a></div>
           </div>
         </article>
 
