--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
   <main class="container">
     <section class="hero">
       <div class="avatar" aria-hidden="true">
-        <img src="../IMG_E5467.JPG" alt="個人資料照片">
+        <img src="assets/profile-avatar.svg" >
       </div>
       <div class="meta">
         <h2>鍾安陞</h2>
